Fix rbox-title z-index

--- a/public_html/bearbeitung/components/css/user.css
+++ b/public_html/bearbeitung/components/css/user.css
@@ -10,7 +10,7 @@
 .rbox-title {
   display: inline-block;
   width: auto;
-  z-index: 1;
+  /*z-index: 1;*/
   position: relative;
   margin-bottom: -0.33em;
   padding: 0.35em 0.9em 0.1em;
@@ -25,7 +25,7 @@
 
 .rbox-data {
   position: relative;
-  z-index: 0;
+  /*z-index: 0;*/
 }
 
 .rbox-close {
